# conferencia_semanal

./: .gitignore  main.py  pyproject.toml  tela_inicial.py
project/UI/: app.py  controller_app.py  error_logger.py  janela_commands.py  janela_view.py  pop_up_loading.py
project/adapters/controllers/: comparar_pis_controller.py  popular_plano_interno_controller.py
project/adapters/interfaces/: comparar_pis_controller.py  popular_plano_interno_controller.py
project/adapters/presenters/: response_format.py
project/domain/entities/: plano_interno.py  plano_interno_seof.py  plano_interno_siafi.py
project/domain/factories/: __init__.py  plano_interno_factory.py
project/domain/interfaces/: plano_interno.py  plano_interno_factory.py  popular_plano_interno.py
project/domain/interfaces/comparar/: comparar_pis.py
project/domain/interfaces/mapear/: mapear_pi.py
project/domain/interfaces/mapear/command/: dicionarizar_indices.py  pegar_indices.py  sanitizar_pi.py
project/domain/interfaces/processar_dados_brutos/: processar_dados_brutos.py
project/errors/: error_handler.py
project/errors/types/: __init__.py  file_not_found.py  file_still_opened.py  sanitize_error.py  valor_data_error.py
project/infra/: criar_pastas.py  initial_configs.py  pdf_output.py
project/infra/pegar_dados_processados/: ler_dados_pi.py  ler_dados_seof.py  ler_dados_siafi.py
project/infra/transformar_arquivos/: verificar_existencia_de_arquivo.py
project/infra/transformar_arquivos/excel/: criar_output_path_to_excel.py  criar_output_path_to_excel_siafi.py  pdf_conversor_to_excel.py  pdf_conversor_to_excel_siafi.py
project/infra/transformar_arquivos/ocr/: criar_output_path_to_pdf_ocr.py  criar_output_path_to_pdf_ocr_pi.py  criar_output_path_to_pdf_ocr_seof.py  pdf_conversor_to_pdf_ocr.py  pdf_conversor_to_pdf_ocr_pi.py  pdf_conversor_to_pdf_ocr_seof.py
project/main/: app.py
project/main/adapters/: comparar_pi_request_adapter.py
project/main/composer/: comparar_pi_seof_composer.py  comparar_pi_siafi_composer.py
project/services/types/: response_data_comparar_pis.py
project/services/utilities/: utils.py
project/use_cases/: popular_plano_interno.py
project/use_cases/comparar/: comparar_pi_seof.py  comparar_pi_siafi.py
project/use_cases/interfaces/: criar_pastas.py  pdf_output.py
project/use_cases/interfaces/pegar_dados_processados/: ler_dados.py
project/use_cases/interfaces/transformar_arquivos/: criar_output_path.py  pdf_conversor.py  verificar_existencia_de_arquivo.py
project/use_cases/interfaces/utilities/: utils.py
project/use_cases/mapear/: mapear_pi.py
project/use_cases/mapear/pi/command/: dicionarizar_indices_pi.py  pegar_indices_pi.py  sanitizar_pi.py
project/use_cases/mapear/pi_seof/command/: dicionarizar_indices_pi_seof.py  pegar_indices_pi_seof.py  sanitizar_pi_seof.py
project/use_cases/mapear/pi_siafi/command/: dicionarizar_indices_pi_siafi.py  pegar_indices_pi_siafi.py  sanitizar_pi_siafi.py
project/use_cases/processar_dados_brutos/: processar_dados_brutos.py
project/validators/: conferencia_data_validator.py
